POST /User endpoint, and rest of basic routing layout finished
